# asyncio_homework

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
classes/: alchemy.py  models.py  swapi.py
utils/: checks.py  helpers.py  request.py
