[tool.poetry]
name = "asyncio-homework"
version = "0.1.0"
description = ""
authors = ["korpaxdev <korpaxdev@gmail.com>"]
readme = "README.md"
packages = [{include = "asyncio_homework"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.16"
aiohttp = "^3.8.4"
aiosqlite = "^0.19.0"
more-itertools = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
